Move SpelTagValueExpressionResolver to metrics package. Fix checkstyle.
Signed-off-by: Dominique Villard <dominique.villard@doctolib.com>